Add support for lazy loading and improve image handling in Multi Image module
- Introduced lazy loading functionality using Intersection Observer.
- Enhanced image description in English and Dutch language files.
- Updated CSS for better visibility control of images.
- Refactored JavaScript to manage image visibility based on breakpoints.
- Cleaned up XML configuration and added lazy loading option.
- Added .gitignore for prepros.config.

--- a/language/en-GB/mod_multi_image.ini
+++ b/language/en-GB/mod_multi_image.ini
@@ -3,38 +3,17 @@
 ; License GNU General Public License version 2 or later
 
 MOD_MULTI_IMAGE="Multi Image"
-MOD_MULTI_IMAGE_XML_DESCRIPTION="This module displays up to 3 user-selected images"
+MOD_MULTI_IMAGE_XML_DESCRIPTION="This module displays up to 3 user-selected images. Image 1 is always visible and appears on the far right when multiple images are present. Display options are available in the 'Advanced' tab."
 
-; Image 1 Fields
+; Image Fields
 MOD_MULTI_IMAGE_IMAGE1_LABEL="Image 1"
 MOD_MULTI_IMAGE_IMAGE1_DESC="Select the first image to display (leave empty to hide)"
-MOD_MULTI_IMAGE_LINK1_LABEL="Link 1"
-MOD_MULTI_IMAGE_LINK1_DESC="Optional URL to link the first image to"
 
-; Image 2 Fields
 MOD_MULTI_IMAGE_IMAGE2_LABEL="Image 2"
 MOD_MULTI_IMAGE_IMAGE2_DESC="Select the second image to display (leave empty to hide)"
-MOD_MULTI_IMAGE_LINK2_LABEL="Link 2"
-MOD_MULTI_IMAGE_LINK2_DESC="Optional URL to link the second image to"
 
-; Image 3 Fields
 MOD_MULTI_IMAGE_IMAGE3_LABEL="Image 3"
 MOD_MULTI_IMAGE_IMAGE3_DESC="Select the third image to display (leave empty to hide)"
-MOD_MULTI_IMAGE_LINK3_LABEL="Link 3"
-MOD_MULTI_IMAGE_LINK3_DESC="Optional URL to link the third image to"
-
-; Display Options
-MOD_MULTI_IMAGE_WIDTH_LABEL="Image Width"
-MOD_MULTI_IMAGE_WIDTH_DESC="Width of images in pixels (leave empty for automatic)"
-MOD_MULTI_IMAGE_HEIGHT_LABEL="Image Height"
-MOD_MULTI_IMAGE_HEIGHT_DESC="Height of images in pixels (leave empty for automatic)"
-
-; Link Target
-MOD_MULTI_IMAGE_TARGET_LABEL="Link Target"
-MOD_MULTI_IMAGE_TARGET_DESC="How linked images should open"
-MOD_MULTI_IMAGE_TARGET_SAME="Same Window"
-MOD_MULTI_IMAGE_TARGET_NEW="New Window"
-MOD_MULTI_IMAGE_TARGET_POPUP="Popup/Modal"
 
 ; Layout Options
 MOD_MULTI_IMAGE_LAYOUT_LABEL="Layout"
@@ -48,3 +27,7 @@ MOD_MULTI_IMAGE_BREAKPOINT_DOUBLE_LABEL="Double Breakpoint (px)"
 MOD_MULTI_IMAGE_BREAKPOINT_DOUBLE_DESC="Minimum viewport width in pixels to show the second image (default: 768)"
 MOD_MULTI_IMAGE_BREAKPOINT_TRIPLE_LABEL="Triple Breakpoint (px)"
 MOD_MULTI_IMAGE_BREAKPOINT_TRIPLE_DESC="Minimum viewport width in pixels to show the third image (default: 1024)"
+
+; Lazy Loading
+MOD_MULTI_IMAGE_LAZY_LOADING_LABEL="Lazy Loading"
+MOD_MULTI_IMAGE_LAZY_LOADING_DESC="Enable lazy loading for images using Intersection Observer"
